fix: linting issues with pint
